--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
     "element-ui": "^2.4.6",
-    "@nuxtjs/axios": "^5.0.0"
+    "@nuxtjs/axios": "^5.0.0",
+    "js-cookie": "^2.2.0",
+    "less": "^3.8.1",
+    "@gauseen/nuxt-proxy": "^1.0.1",
+    "less-loader": "^4.1.0",
+    "qs": "^6.5.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
