--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "element-ui": "^2.4.6",
+    "@gauseen/nuxt-proxy": "^1.0.1",
     "@nuxtjs/axios": "^5.0.0",
+    "babel-loader": "^8.0.4",
+    "cross-env": "^5.2.0",
+    "element-ui": "^2.4.6",
     "js-cookie": "^2.2.0",
     "less": "^3.8.1",
-    "@gauseen/nuxt-proxy": "^1.0.1",
     "less-loader": "^4.1.0",
+    "nuxt": "^2.0.0",
     "qs": "^6.5.2"
   },
   "devDependencies": {
